# go/cmd/polydb-server/main.go
@@ -38,14 +38,15 @@ func main() {
 
 	app := appcore.New(db, kr)
 	addr := envOr("POLYDB_ADDR", "127.0.0.1:8080")
+	token := os.Getenv("POLYDB_SERVER_TOKEN")
 
 	srv := &http.Server{
 		Addr:              addr,
-		Handler:           server.New(app).Handler(),
+		Handler:           server.NewWithToken(app, token).Handler(),
 		ReadHeaderTimeout: 10 * time.Second,
 	}
 
-	logger.Info("polydb-server listening", "addr", addr, "data_dir", dataDir)
+	logger.Info("polydb-server listening", "addr", addr, "data_dir", dataDir, "auth", token != "")
 	if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
 		logger.Error("server stopped", "error", err)
 		os.Exit(1)
